Fix chat box overflow

--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -1,5 +1,5 @@
 .chat-history {
-  height: calc(100% - 118px);
+  height: calc(100% - 135px);
 }
 
 .chat-history ul {
